@@ -36,6 +36,9 @@ Changes in stable release 2.4.9 (not released yet)
 * Fixed displaying menu items with icons when using the MenuStyle
   SubmmenusLeft.
 
+* Fixed problems with the pointer moving off screen in a multi
+  head setup.
+
 -------------------------------------------------------------------
 
 Changes in stable release 2.4.8 (11-Jun-2002)
